[gd_scene load_steps=3 format=3 uid="uid://bbwjrdk3jdfry"]

[ext_resource type="Script" path="res://scripts/anchor_detector_2d.gd" id="1_u7y56"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wbqjl"]
radius = 6.0

[node name="AnchorDetector2D" type="Area2D"]
collision_layer = 0
collision_mask = 8
monitorable = false
script = ExtResource("1_u7y56")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wbqjl")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
